--- a/index.html
+++ b/index.html
@@ -151,49 +151,90 @@
     <section id="team" class="content-section text-center white">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>Team</h1>
+                <h1>The Team</h1>
+                
                 <div class="row">
-                    <!-- <div class="col-lg-3"></div> -->
+                    <h2>The Investment Team</h2>
+                    <div class="col-lg-3">
+                        <img src="img/anu.png" class="img-responsive" alt="Responsive image">
+                        <h2>Anubhav Maheshwari</h2>
+                        <p>Anubhav (Anu) is a senior in the M&T Program who loves learning about technology companies. During college, he has interned previously at a young Philadelphia internet start up, as well as evaluated and funded student founded startups as Chair of the Weiss Tech House Innovation Fund. After graduation in May 2015, he will be joining Morgan Stanley's Technology Investment Banking team in New York.</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="img/lauren.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Lauren Reeder</h2>
+                        <p>Lauren is a junior in the M&T Program studying Computer Science, Statistics, and Finance. She has previously worked at an education technology start-up and is also a member of the Dorm Room Fund in Philadelphia. She loves to ski, bike, and travel whenever the opportunity arrises.</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="img/max.png" class="img-responsive" alt="Responsive image">
+                        <h2>Max Isenberg</h2>
+                        <p>Max is a junior in the M&T Program from the San Francisco Bay Area studying Materials Science, Finance, and Entrepreneurial Management. He is interested in alternative energy and cleantech, and hopes to eventually work in a strategic role at a company in either of those industries. In his free time, he enjoys following Major League Baseball, running on treadmills while listening to indie rock, and eating at different Philly restaurants.</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="img/olivia.png" class="img-responsive" alt="Responsive image">
+                        <h2>Olivia Chen</h2>
+                        <p>Olivia is a sophomore in the M&T program studying Systems Engineering, Finance, and Management. She has previously worked at a venture capital database startup as well as a healthy meal delivery startup. A lifelong treehugger, she is interested in renewable energy and cleantech. In her free time, she enjoys reading and finding new music.</p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-4">
+                        <img src="img/robert.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Robert Lawrence</h2>
+                        <p>Robert is a sophomore in the M&T Program studying Systems Engineering, Finance, Accounting, and OPIM. He has previously interned at CB Insights writing about startup and VC trends. He is interested in TMT investing. In his free time, Robert enjoys biking around Philadelphia.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/rudra.jpeg" class="img-responsive" alt="Responsive image">
+                        <h2>Rudra Puri</h2>
+                        <p>Rudra is a sophomore in the M&T Program studying Materials Science, Finance, and Management. He is interested in energy and nanotechnology, and hopes to eventually work in venture capital as it relates to those industries. He has previously worked at Seedcamp, a seed-stage investment fund that invests in pan European technology startups. He loves to cook, swim, and travel whenever the opportunity arises.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/raj.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Raj Atluri</h2>
+                        <p>Raj is a freshman in the M&T Program studying Computer Science and Finance. He has previously worked at a tech consulting start-up and is involved with the Wharton Investment and Trading Group. During his free time, Raj enjoys golfing, playing squash, and finding new music. </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <h2>The Value Creation Team</h2>
+                    <div class="col-lg-3">
                         <div class="row">
                             <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
                         </div>
                         <h2>Jeff Grimes</h2>
-                        <p>Jeff is an M&T senior studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
+                        <p>Jeff is a senior in the M&T Program studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
                     </div>
-                    <div class="col-lg-4">
-                        <img src="img/anu.png" class="img-responsive" alt="Responsive image">
-                        <h2>Anubhav Maheshwari</h2>
-                        <p>Anubhav (Anu) is a senior in M&T who loves learning about technology companies. During college, he has interned previously at a young Philadelphia internet start up, as well as evaluated and funded student founded startups as Chair of the Weiss Tech House Innovation Fund. After graduation in May 2015, he will be joining Morgan Stanley's Technology Investment Banking team in New York.</p>
-                    </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/nina.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Nina Lu</h2>
                         <p>Nina is a junior in the M&T program studying Computer Science and Finance. She is a former Apple and Microsoft intern and blogs on Medium about tech. She enjoys late night runs, philosophy, and sourcing new music on SoundCloud.</p>
                     </div>
-                </div>
-                <div class="row">
-                    <!-- <div class="col-lg-3"></div> -->
-                    <div class="col-lg-4">
-                        <img src="img/max.png" class="img-responsive" alt="Responsive image">
-                        <h2>Max Isenberg</h2>
-                        <p>Max is a junior from the San Francisco Bay Area studying Materials Science, Finance, and Entrepreneurial Management. He is interested in alternative energy and cleantech, and hopes to eventually work in a strategic role at a company in either of those industries. In his free time, he enjoys following Major League Baseball, running on treadmills while listening to indie rock, and eating at different Philly restaurants.</p>
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="img/lauren.jpg" class="img-responsive" alt="Responsive image">
-                        <h2>Lauren Reeder</h2>
-                        <p>Lauren is a junior in M&T studying Computer Science, Statistics, and Finance. She has previously worked at an education technology start-up and is also a member of the Dorm Room Fund in Philadelphia. She loves to ski, bike, and travel whenever the opportunity arrises.</p>
-                    </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/karan.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Karan Hiremath</h2>
                         <p>Karan is a Junior in the M&T Program studying Computer Science, Management,and Finance from South Jersey. He has previously worked at the Office of Naval Research, a Philadelphia Venture Capital Firm, and on his own startup. He is interested in Entreprise Tech and Machine Learning. Karan enjoys reading, watching tv, listening to music, and cooking in his free time.</p>
                     </div>
+                    <div class="col-lg-3">
+                        <img src="img/reuben.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Reuben Abraham</h2>
+                        <p>Reuben is a sophomore in the M&T Program studying Computer Science, Management, and Finance. He has previously worked as a Residential Teaching Assistant for M&TSI and as an intern at Polarcus Inc, an Oil and Gas Exploration Company in Dubai. In his free time, he enjoys playing cricket, discovering new music, and playing video games.</p>
+                    </div>
                 </div>
-<!--                 <div class="row">
-                    <p>Are you a current M&T Student looking to help the best startups at Penn by being a part of the M&T Innovation Fund? Apply now to help shape the future of the Fund!</p>
-                    <a href="https://docs.google.com//forms/d/1FrH1uzUnmfjuyY_at99jGmQxyfKNAdbnzzxjd2Rrkfk/viewform" class="btn btn-default btn-lg btn-black" style="color: #fff; background-color: #000; ">Apply Now</a>
-                </div> -->
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Naman Mehrotra</h2>
+                        <p>Naman is a sophomore in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. He loves reading about new technology, especially in hardware consumer tech, electric vehicles, aerospace, and alternative energy. He is currently on the board of the Technology Entrepreneurship Club and helped start the Penn Aerospace Club. He enjoys watching movies, biking, and travelling.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
+                        <h2>Jacob Kahn</h2>
+                        <p>Jacob is a freshman in the M&T Program from the Chicago area studying Computer Science, Statistics, and Finance. He is interested in tech of all shapes and sizes, astrophysics, and the philosophy of science. Currently working on his own startup, he previously worked at a financial technology company. In his free time, Jacob enjoys playing the guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/sam.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Sam Burns</h2>
+                        <p>Sam is currently a freshman in the M&T Program studying Materials Engineering and Business Analytics. She's worked with several entrepreneurial incubators in the past including the Martin Trust Center at MIT and the Weiss Tech House at Penn. In addition to the M&T Innovation Fund, she is a Project Manager on the Weiss Tech House Innovation Fund, Corporate Committee member on the M&T Board, and a member of the Penn Mock Trial Team. She also works on an entrepreneurial finance research team at Wharton.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
