--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
     <section id="sponsors" class="content-section text-center white">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+                <h1>Portfolio</h1>
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="img/clv"
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h1>Sponsors</h1>
                 <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni. 
                 </p>
