--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Apply Now</h1>
                     <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Submit your information below and we will contact you shortly!</p>
-                    <a href="./apply.html" class="btn btn-default btn-lg">Apply Now</a>
+                    <a href="apply/index.html" class="btn btn-default btn-lg">Apply Now</a>
                      <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                 </div>
             </div>
