updating portfolio and faculty advisors

--- a/index.html
+++ b/index.html
@@ -129,17 +129,48 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Portfolio</h1>
-
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="img/clv"
+                        <img src="img/clv.png">
+                        <p><a href="http://www.clvmetrics.com/">CLVMetrics</a> is a web-based platform that implements/extends cutting-edge models developed/popularized by co-founder Professor Peter Fader. Their web application estimates and forecasts CLV and related metrics for every customer. It is fast, simple, and seamlessly integrates with firms’ existing CRM and transaction systems, providing valuable insights that enable immediate action. CLVMetrics helps firms leverage their existing data assets to better achieve customer-centric success.</p>
+
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/gtrack.png">
+                        <p><a href="http://www.gtracktechnologies.com">GTrack Technologies</a> is developing novel chemical tracers for use in reservoir characterization in the oil and gas industry. These tracers are cheap, safe, and incredibly accurate in measuring reservoir data to increase oil extraction efficiency.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/oncora.png">
+                        <p><a href="http://oncoramedical.com/">Oncora Medical</a> is the first commercial predictive analytics platform for radiation oncology. Oncora applies cutting edge machine learning techniques to leverage historical patient data, advanced imaging data, insurance claims data, and specific radiation dose information to help physicians provide the best possible treatments for cancer patients.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img src="img/prayas.png">
+                        <p><a href="http://www.prayasanalytics.com/">Prayas Analytics</a> brings the power of data to the in-store customer checkout experience. They help large brick-and-mortar retailers with smarter labor modeling, more effective queue management, and customer experience enhancement. This is done by calculating key metrics such as average queue lengths, associate engagement, and customer abandonment. Importantly, there is no hardware setup required - Prayas’ technology plugs in seamlessly with existing loss prevention systems ensuring low capex and extremely quick deployment.</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="img/leapyear.png">
+                        <p><a href="">LeapYear</a> is a platform for creating and managing permanently de-identified copies of sensitive data. Their technology leverages differentially private algorithms to ensure that databases remain private and compliant, even in the event of a security breach. Shroudbase enables organizations to sell, share, or open-source all of their data without privacy concerns and produce accurate statistical insights from previously untouchable data.</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Sponsors</h1>
-                <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni. 
+                <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni as well as various corporate sponsors.
                 </p>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="img/penn_full.gif">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/mnt.png">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/aws.png">
+                    </div>
             </div>
         </div>
     </section>
@@ -207,9 +238,7 @@
                 <div class="row">
                     <h2>The Value Creation Team</h2>
                     <div class="col-lg-3">
-                        <div class="row">
-                            <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
-                        </div>
+                        <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
                         <h2>Jeff Grimes</h2>
                         <p>Jeff is a senior in the M&T Program studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
                     </div>
@@ -246,6 +275,14 @@
                         <p>Sam is currently a freshman in the M&T Program studying Materials Engineering and Business Analytics. She's worked with several entrepreneurial incubators in the past including the Martin Trust Center at MIT and the Weiss Tech House at Penn. In addition to the M&T Innovation Fund, she is a Project Manager on the Weiss Tech House Innovation Fund, Corporate Committee member on the M&T Board, and a member of the Penn Mock Trial Team. She also works on an entrepreneurial finance research team at Wharton.</p>
                     </div>
                 </div>
+                <div class="row">
+                    <h2>Faculty Advisors</h2>
+                    <div class="col-lg-6 col-lg-offset-3">
+                        <img src="img/boon.png" class="img-responsive" alt="Responsive image">
+                        <h2>Boon Thau Loo</h2>
+                        <p>Boon's research focuses on distributed data management systems, Internet-scale query processing, and the application of database technologies to networked systems. He is particularly interested in developing information-centric network architectures that can be easily extended, composed, and formally verified. His recent projects include applying declarative networking techniques in the areas of dynamic network composition, adaptive mobile ad-hoc networks, and scalable knowledge-based networks. He is also exploring novel database-inspired techniques for diagnosing, securing, and verifying network protocols.</p>
+                    </div>
+                </div>                    
             </div>
         </div>
     </section>
