changing top bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#apply">Apply</a>
@@ -125,7 +125,7 @@
         </div>
     </section>
 
-    <section id="sponsors" class="content-section text-center white">
+    <section id="portfolio" class="content-section text-center white">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Portfolio</h1>
