--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
                     <div class="col-lg-6">
                         <img src="img/leapyear.png">
-                        <p><a href="">LeapYear</a> is a platform for creating and managing permanently de-identified copies of sensitive data. Their technology leverages differentially private algorithms to ensure that databases remain private and compliant, even in the event of a security breach. Shroudbase enables organizations to sell, share, or open-source all of their data without privacy concerns and produce accurate statistical insights from previously untouchable data.</p>
+                        <p><a href="http://leapyear.io">LeapYear</a> is a platform for creating and managing permanently de-identified copies of sensitive data. Their technology leverages differentially private algorithms to ensure that databases remain private and compliant, even in the event of a security breach. Shroudbase enables organizations to sell, share, or open-source all of their data without privacy concerns and produce accurate statistical insights from previously untouchable data.</p>
                     </div>
                 </div>
             </div>
@@ -219,20 +219,25 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/robert.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Robert Lawrence</h2>
                         <p>Robert is a sophomore in the M&T Program studying Systems Engineering, Finance, Accounting, and OPIM. He has previously interned at CB Insights writing about startup and VC trends. He is interested in TMT investing. In his free time, Robert enjoys biking around Philadelphia.</p>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/rudra.jpeg" class="img-responsive" alt="Responsive image">
                         <h2>Rudra Puri</h2>
                         <p>Rudra is a sophomore in the M&T Program studying Materials Science, Finance, and Management. He is interested in energy and nanotechnology, and hopes to eventually work in venture capital as it relates to those industries. He has previously worked at Seedcamp, a seed-stage investment fund that invests in pan European technology startups. He loves to cook, swim, and travel whenever the opportunity arises.</p>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/raj.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Raj Atluri</h2>
                         <p>Raj is a freshman in the M&T Program studying Computer Science and Finance. He has previously worked at a tech consulting start-up and is involved with the Wharton Investment and Trading Group. During his free time, Raj enjoys golfing, playing squash, and finding new music. </p>
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="img/akhil.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Akhil Ganti</h2>
+                        <p>Akhil is a freshman in the M&T Program studying Computer Science, Finance, and Entrepreneurial Management. He is especially interested in artificial intelligence and, in particular, natural language processing. In addition to the M&T Innovation Fund, he works as a research assistant in the Wharton Management department and is involved with the Wharton Investment & Trading Group. In his free time, Akhil enjoys playing pool, practicing the piano and saxophone, and reading.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -259,20 +264,25 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Naman Mehrotra</h2>
                         <p>Naman is a sophomore in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. He loves reading about new technology, especially in hardware consumer tech, electric vehicles, aerospace, and alternative energy. He is currently on the board of the Technology Entrepreneurship Club and helped start the Penn Aerospace Club. He enjoys watching movies, biking, and travelling.</p>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
                         <h2>Jacob Kahn</h2>
                         <p>Jacob is a freshman in the M&T Program from the Chicago area studying Computer Science, Statistics, and Finance. He is interested in tech of all shapes and sizes, astrophysics, and the philosophy of science. Currently working on his own startup, he previously worked at a financial technology company. In his free time, Jacob enjoys playing the guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img src="img/sam.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Sam Burns</h2>
                         <p>Sam is currently a freshman in the M&T Program studying Materials Engineering and Business Analytics. She's worked with several entrepreneurial incubators in the past including the Martin Trust Center at MIT and the Weiss Tech House at Penn. In addition to the M&T Innovation Fund, she is a Project Manager on the Weiss Tech House Innovation Fund, Corporate Committee member on the M&T Board, and a member of the Penn Mock Trial Team. She also works on an entrepreneurial finance research team at Wharton.</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="img/rohun.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Rohun Patel</h2>
+                        <p>Rohun is a sophomore in the M&T Program studying Electrical Engineering, OPIM, and Marketing. He is interested in reading about all kinds of tech from alternative energy to consumer products. Rohun enjoys skiing, playing guitar, and listening to music.</p>
                     </div>
                 </div>
                 <div class="row">
