--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </p>
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="img/penn_full.gif">
+                        <img src="img/penn_full.png">
                     </div>
                     <div class="col-lg-4">
                         <img src="img/mnt.png">
@@ -318,7 +318,7 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d764.6285791433569!2d-75.19602087073571!3d39.95225232677778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c659f59fb2eb%3A0x3700cb08e5bb5f25!2s3609+Locust+Walk%2C+Philadelphia%2C+PA+19104!5e0!3m2!1sen!2sus!4v1454003507130" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <!-- Footer -->
     <footer>
@@ -354,11 +354,12 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/1.0.4/js/grayscale.min.js"></script>
