--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Portfolio</h1>
+                <hr>
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="img/clv.png">
@@ -159,6 +160,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Sponsors</h1>
+                <hr>
                 <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni as well as various corporate sponsors.
                 </p>
                 <div class="row">
@@ -197,11 +199,7 @@
                 
                 <div class="row">
                     <h2>The Investment Team</h2>
-                    <div class="col-lg-3">
-                        <img src="img/anu.png" class="img-responsive" alt="Responsive image">
-                        <h2>Anubhav Maheshwari</h2>
-                        <p>Anubhav (Anu) is a senior in the M&T Program who loves learning about technology companies. During college, he has interned previously at a young Philadelphia internet start up, as well as evaluated and funded student founded startups as Chair of the Weiss Tech House Innovation Fund. After graduation in May 2015, he will be joining Morgan Stanley's Technology Investment Banking team in New York.</p>
-                    </div>
+                    <hr>
                     <div class="col-lg-3">
                         <img src="img/lauren.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Lauren Reeder</h2>
@@ -213,14 +211,7 @@
                         <p>Max is a junior in the M&T Program from the San Francisco Bay Area studying Materials Science, Finance, and Entrepreneurial Management. He is interested in alternative energy and cleantech, and hopes to eventually work in a strategic role at a company in either of those industries. In his free time, he enjoys following Major League Baseball, running on treadmills while listening to indie rock, and eating at different Philly restaurants.</p>
                     </div>
                     <div class="col-lg-3">
-                        <img src="img/olivia.png" class="img-responsive" alt="Responsive image">
-                        <h2>Olivia Chen</h2>
-                        <p>Olivia is a sophomore in the M&T program studying Systems Engineering, Finance, and Management. She has previously worked at a venture capital database startup as well as a healthy meal delivery startup. A lifelong treehugger, she is interested in renewable energy and cleantech. In her free time, she enjoys reading and finding new music.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3">
-                        <img src="img/robert.jpg" class="img-responsive" alt="Responsive image">
+                       <img src="img/robert.jpg" class="img-responsive" alt="Responsive image">
                         <h2>Robert Lawrence</h2>
                         <p>Robert is a sophomore in the M&T Program studying Systems Engineering, Finance, Accounting, and OPIM. He has previously interned at CB Insights writing about startup and VC trends. He is interested in TMT investing. In his free time, Robert enjoys biking around Philadelphia.</p>
                     </div>
@@ -228,6 +219,16 @@
                         <img src="img/rudra.jpeg" class="img-responsive" alt="Responsive image">
                         <h2>Rudra Puri</h2>
                         <p>Rudra is a sophomore in the M&T Program studying Materials Science, Finance, and Management. He is interested in energy and nanotechnology, and hopes to eventually work in venture capital as it relates to those industries. He has previously worked at Seedcamp, a seed-stage investment fund that invests in pan European technology startups. He loves to cook, swim, and travel whenever the opportunity arises.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">
+
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="img/olivia.png" class="img-responsive" alt="Responsive image">
+                        <h2>Olivia Chen</h2>
+                        <p>Olivia is a sophomore in the M&T program studying Systems Engineering, Finance, and Management. She has previously worked at a venture capital database startup as well as a healthy meal delivery startup. A lifelong treehugger, she is interested in renewable energy and cleantech. In her free time, she enjoys reading and finding new music.</p>
                     </div>
                     <div class="col-lg-3">
                         <img src="img/raj.jpg" class="img-responsive" alt="Responsive image">
@@ -242,10 +243,11 @@
                 </div>
                 <div class="row">
                     <h2>The Value Creation Team</h2>
+                    <hr>
                     <div class="col-lg-3">
-                        <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
-                        <h2>Jeff Grimes</h2>
-                        <p>Jeff is a senior in the M&T Program studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
+                       <img src="img/reuben.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Reuben Abraham</h2>
+                        <p>Reuben is a sophomore in the M&T Program studying Computer Science, Management, and Finance. He has previously worked as a Residential Teaching Assistant for M&TSI and as an intern at Polarcus Inc, an Oil and Gas Exploration Company in Dubai. In his free time, he enjoys playing cricket, discovering new music, and playing video games.</p>
                     </div>
                     <div class="col-lg-3">
                         <img src="img/nina.jpg" class="img-responsive" alt="Responsive image">
@@ -258,16 +260,14 @@
                         <p>Karan is a Junior in the M&T Program studying Computer Science, Management,and Finance from South Jersey. He has previously worked at the Office of Naval Research, a Philadelphia Venture Capital Firm, and on his own startup. He is interested in Entreprise Tech and Machine Learning. Karan enjoys reading, watching tv, listening to music, and cooking in his free time.</p>
                     </div>
                     <div class="col-lg-3">
-                        <img src="img/reuben.jpg" class="img-responsive" alt="Responsive image">
-                        <h2>Reuben Abraham</h2>
-                        <p>Reuben is a sophomore in the M&T Program studying Computer Science, Management, and Finance. He has previously worked as a Residential Teaching Assistant for M&TSI and as an intern at Polarcus Inc, an Oil and Gas Exploration Company in Dubai. In his free time, he enjoys playing cricket, discovering new music, and playing video games.</p>
+                        <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Naman Mehrotra</h2>
+                        <p>Naman is a sophomore in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. He loves reading about new technology, especially in hardware consumer tech, electric vehicles, aerospace, and alternative energy. He is currently on the board of the Technology Entrepreneurship Club and helped start the Penn Aerospace Club. He enjoys watching movies, biking, and travelling.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
-                        <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
-                        <h2>Naman Mehrotra</h2>
-                        <p>Naman is a sophomore in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. He loves reading about new technology, especially in hardware consumer tech, electric vehicles, aerospace, and alternative energy. He is currently on the board of the Technology Entrepreneurship Club and helped start the Penn Aerospace Club. He enjoys watching movies, biking, and travelling.</p>
+
                     </div>
                     <div class="col-lg-3">
                         <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
@@ -287,12 +287,26 @@
                 </div>
                 <div class="row">
                     <h2>Faculty Advisors</h2>
+                    <hr>
                     <div class="col-lg-6 col-lg-offset-3">
                         <img src="img/boon.png" class="img-responsive" alt="Responsive image">
                         <h2>Boon Thau Loo</h2>
                         <p>Boon's research focuses on distributed data management systems, Internet-scale query processing, and the application of database technologies to networked systems. He is particularly interested in developing information-centric network architectures that can be easily extended, composed, and formally verified. His recent projects include applying declarative networking techniques in the areas of dynamic network composition, adaptive mobile ad-hoc networks, and scalable knowledge-based networks. He is also exploring novel database-inspired techniques for diagnosing, securing, and verifying network protocols.</p>
                     </div>
-                </div>                    
+                </div> 
+                <div class="row">
+                    <h2>Fund Alumni</h2>
+                    <hr>
+                   <div class="col-lg-4 col-lg-offset-2">
+                        <img src="img/anu.png" class="img-responsive" alt="Responsive image">
+                        <h2>Anubhav Maheshwari</h2>
+                        <p>Anubhav (Anu) is a senior in the M&T Program who loves learning about technology companies. During college, he has interned previously at a young Philadelphia internet start up, as well as evaluated and funded student founded startups as Chair of the Weiss Tech House Innovation Fund. After graduation in May 2015, he will be joining Morgan Stanley's Technology Investment Banking team in New York.</p>
+                    </div>
+                   <div class="col-lg-4">
+                        <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
+                        <h2>Jeff Grimes</h2>
+                        <p>Jeff is a senior in the M&T Program studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
+                    </div>
             </div>
         </div>
     </section>
