--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+     <!-- added cache control -->
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <!-- end cache control -->
+
     <title>Jerome Fisher M&T Innovation Fund</title>
 
     <!-- Bootstrap Core CSS -->
@@ -267,7 +275,9 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
-
+                        <img src="img/amit.png" class="img-responsive" alt="Responsive image">
+                        <h2>Amit Patel</h2>
+                        <p>Amit is a sophomore in the M&T Program studying Computer Science, Finance, and Statistics. He interned at CB Insights and is interested in data science startups and quantitative finance.</p>
                     </div>
                     <div class="col-lg-3">
                         <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
