--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                         <p>Max is a junior in the M&T Program from the San Francisco Bay Area studying Materials Science, Finance, and Entrepreneurial Management. He is interested in alternative energy and cleantech, and hopes to eventually work in a strategic role at a company in either of those industries. In his free time, he enjoys following Major League Baseball, running on treadmills while listening to indie rock, and eating at different Philly restaurants.</p>
                     </div>
                     <div class="col-lg-3">
-                       <img src="img/robert.jpg" class="img-responsive" alt="Responsive image">
-                        <h2>Robert Lawrence</h2>
-                        <p>Robert is a sophomore in the M&T Program studying Systems Engineering, Finance, Accounting, and OPIM. He has previously interned at CB Insights writing about startup and VC trends. He is interested in TMT investing. In his free time, Robert enjoys biking around Philadelphia.</p>
+                       <img src="img/rob.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Rob Lawrence</h2>
+                        <p>Rob is a junior in the M&T Program studying Systems Engineering, Finance, and Accounting. He has previously interned at CB Insights writing about startup and VC trends, and at an investment firm. He is interested in hardware and telecom, and aims to work with TMT investments. In his free time, he likes to bike around Philadelphia and listen to podcasts.</p>
                     </div>
                     <div class="col-lg-3">
                         <img src="img/rudra.jpeg" class="img-responsive" alt="Responsive image">
@@ -231,7 +231,9 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
-
+                        <img src="img/santosh.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Santosh Vallabhaneni</h2>
+                        <p></p>
                     </div>
                     <div class="col-lg-3">
                         <img src="img/olivia.png" class="img-responsive" alt="Responsive image">
