Update description and image

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col-lg-6">
                             <img src="img/localadventura.png">
-                            <p><a href="http://www.localaventura.com/">Local Adventura</a>  </p>
+                            <p><a href="http://www.localaventura.com/">Local Adventura</a> is a marketplace platform, similar to AirBnb, that allows travelers seeking authentic experiences to book tours with Local Guides in Latin America who are passionate about sharing their culture. We provide customers with the ability to search through adventures, book tours instantly, and make easy, cashless payments electronically, and in advance. We believe that by connecting people from disparate parts of the globe and allowing them to explore the world together, we can improve it.</p>
                         </div>
                     </div>
                     <div class="row">
