--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="col-lg-4">
                             <img src="img/olivia.png" class="img-responsive" alt="Responsive image">
                             <h2>Olivia Chen</h2>
-                            <p>Olivia is a sophomore in the M&T program studying Systems Engineering, Finance, and Management. She has previously worked at a venture capital database startup as well as a healthy meal delivery startup. A lifelong treehugger, she is interested in renewable energy and cleantech. In her free time, she enjoys reading and finding new music.</p>
+                            <p>Olivia is a junior in the M&T Program studying Systems Engineering, Business Analytics, and Entrepreneurship & Innovation. She has previously worked at startups CB Insights and Fitly as well as hedge fund Arena Investors. On campus, she is also involved in MUSE Consulting and Wharton Undergraduate Energy Group. In her free time, Olivia enjoys reading, cooking, and searching for new music.</p>
                         </div>
                     </div>
                     <div class="row">
