--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <div class="col-lg-4">
                             <img src="img/rudra.jpeg" class="img-responsive" alt="Responsive image">
                             <h2>Rudra Puri</h2>
-                            <p>Rudra is a sophomore in the M&T Program studying Materials Science, Finance, and Management. He is interested in energy and nanotechnology, and hopes to eventually work in venture capital as it relates to those industries. He has previously worked at Seedcamp, a seed-stage investment fund that invests in pan European technology startups. He loves to cook, swim, and travel whenever the opportunity arises.</p>
+                            <p>Rudra is a junior in the M&T Program studying Materials Science, Finance, and Entrepreneurial Management. He is interested in energy and nanotechnology and venture investing, and hopes to work in venture capital as it relates to those industries. He has previously worked at Seedcamp, a seed-stage investment fund in pan European technology startups and at Arcadia Investment Partners, a private equity firm. He loves to cook, swim, and travel whenever the opportunity arises.</p>
                         </div>
                         <div class="col-lg-4">
                             <img src="img/yoni.jpg" class="img-responsive" alt="Responsive image">
