--- a/index.html
+++ b/index.html
@@ -265,10 +265,11 @@
                             <h2>Sam Burns</h2>
                             <p>Sam is currently a freshman in the M&T Program studying Materials Engineering and Business Analytics. She's worked with several entrepreneurial incubators in the past including the Martin Trust Center at MIT and the Weiss Tech House at Penn. In addition to the M&T Innovation Fund, she is a Project Manager on the Weiss Tech House Innovation Fund, Corporate Committee member on the M&T Board, and a member of the Penn Mock Trial Team. She also works on an entrepreneurial finance research team at Wharton.</p>
                         </div>
+                        
                         <div class="col-lg-3">
-                            <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Naman Mehrotra</h2>
-                            <p>Naman is a sophomore in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. He loves reading about new technology, especially in hardware consumer tech, electric vehicles, aerospace, and alternative energy. He is currently on the board of the Technology Entrepreneurship Club and helped start the Penn Aerospace Club. He enjoys watching movies, biking, and travelling.</p>
+                            <img src="img/rohun.jpg" class="img-responsive" alt="Responsive image">
+                            <h2>Rohun Patel</h2>
+                            <p>Rohun is a sophomore in the M&T Program studying Electrical Engineering, OPIM, and Marketing. He is interested in reading about all kinds of tech from alternative energy to consumer products. Rohun enjoys skiing, playing guitar, and listening to music.</p>
                         </div>
                     </div>
                     <div class="row">
@@ -280,12 +281,12 @@
                         <div class="col-lg-4">
                             <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
                             <h2>Jacob Kahn</h2>
-                            <p>Jacob is a freshman in the M&T Program from the Chicago area studying Computer Science, Statistics, and Finance. He is interested in tech of all shapes and sizes, astrophysics, and the philosophy of science. Currently working on his own startup, he previously worked at a financial technology company. In his free time, Jacob enjoys playing the guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
+                            <p>Jacob is a sophomore in the M&T Program from the Chicago area studying Computer Science, Statistics, and Finance. He is interested in tech of all shapes and sizes, astrophysics, and the philosophy of science. Currently working on his own startup, he previously worked at a financial technology company, and is an incoming software engineering intern at Facebook. In his free time, Jacob enjoys playing the guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/rohun.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Rohun Patel</h2>
-                            <p>Rohun is a sophomore in the M&T Program studying Electrical Engineering, OPIM, and Marketing. He is interested in reading about all kinds of tech from alternative energy to consumer products. Rohun enjoys skiing, playing guitar, and listening to music.</p>
+                            <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
+                            <h2>Naman Mehrotra</h2>
+                            <p>Naman is a sophomore in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. He loves reading about new technology, especially in hardware consumer tech, electric vehicles, aerospace, and alternative energy. He is currently on the board of the Technology Entrepreneurship Club and helped start the Penn Aerospace Club. He enjoys watching movies, biking, and travelling.</p>
                         </div>
                     </div>
                     <div class="row">
