--- a/index.html
+++ b/index.html
@@ -290,6 +290,23 @@
                         </div>
                     </div>
                     <div class="row">
+                        <!-- <div class="col-lg-4">
+                            <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
+                            <h2>Name</h2>
+                            <p>Bio</p>
+                        </div> -->
+                        <div class="col-lg-4">
+                            <img src="img/frank.png" class="img-responsive" alt="Responsive image">
+                            <h2>Frank Fan</h2>
+                            <p>Fangyi (Frank) is a freshman in the M&T Program studying Electrical Engineering and Finance. He is interested in hardware design and artificial intelligence. He has worked at Bosch before, the world's largest supplier of automotive components. Besides M&T Innovation Fund, he is involved with the Technology Entrepreneurship Club, Wharton Asia Exchange, and a Chinese A Capella. He enjoys outdoor adventures and playing the accordion.</p>
+                        </div>
+                        <!-- <div class="col-lg-4">
+                            <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
+                            <h2>Name</h2>
+                            <p>Bio</p>
+                        </div> -->
+                    </div>
+                    <div class="row">
                         <h2>Faculty Advisors</h2>
                         <hr>
                         <div class="col-lg-6 col-lg-offset-3">
