--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
                         </div>
                     </div>
                     <div class="row">
-                        <!-- <div class="col-lg-4">
-                            <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
-                            <h2>Name</h2>
-                            <p>Bio</p>
-                        </div> -->
+                        <div class="col-lg-4">
+                            <img src="img/sina.png" class="img-responsive" alt="Responsive image">
+                            <h2>Sina Golkari</h2>
+                            <p>Sina is freshman in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. His interests include product design, automotive engineering, and biotechnology. In the past, he worked for a medical device startup in the Boston area. On campus, he is also a member of the Penn Electric Racing team.</p>
+                        </div>
                         <div class="col-lg-4">
                             <img src="img/frank.png" class="img-responsive" alt="Responsive image">
                             <h2>Frank Fan</h2>
