--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
                             <h2>Frank Fan</h2>
                             <p>Fangyi (Frank) is a freshman in the M&T Program studying Electrical Engineering and Finance. He is interested in hardware design and artificial intelligence. He has worked at Bosch before, the world's largest supplier of automotive components. Besides M&T Innovation Fund, he is involved with the Technology Entrepreneurship Club, Wharton Asia Exchange, and a Chinese A Capella. He enjoys outdoor adventures and playing the accordion.</p>
                         </div>
-                        <!-- <div class="col-lg-4">
-                            <img src="img/naman.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Name</h2>
-                            <p>Bio</p>
-                        </div> -->
+                        <div class="col-lg-4">
+                            <img src="img/micah.png" class="img-responsive" alt="Responsive image">
+                            <h2>Micah Zirn</h2>
+                            <p>Micah is a freshman in the M&T program studying Computer Science and Finance and seeking a minor in nanotechnology. He is interested in iOS development and ran track competitively in high school. He previously interned at ARCOM capital, a natural gas commodity trading firm. In addition to the M&T Innovation Fund, Micah spends time with the Wharton Undergraduate Entrepreneurship Club and the Penn Innovation Conference.</p>
+                        </div>
                     </div>
                     <div class="row">
                         <h2>Faculty Advisors</h2>
