--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <div class="col-lg-3">
                             <img src="img/santosh.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Santosh Vallabhaneni</h2>
-                            <p></p>
+                            <p>Santosh is a sophomore in the M&T Program studying Finance and Computer Science. He has previously worked at a health care startup and numerous venture capital firms in India. He has a particular interested in analytics and the internet of things. Outside of the innovation fund, he is involved with the International Affairs Association and loves playing basketball and golf.</p>
                         </div>
                     </div>
                     <div class="row">
