Add company bio

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                     <h1>Portfolio</h1>
                     <hr>
                     <div class="row">
+                        <div class="col-lg-6 col-lg-offset-3">
+                            <img src="img/healthie.png">
+                            <p><a href="http://gethealthie.com">Healthie</a> is a web &amp; mobile interface for dietitians to manage their entire practice on one platform (coordinate scheduling and billing, share documents electronically, monitor patient health, and conduct virtual visits).  By offering a turnkey solution for dietitians to see more patients, we aim to reduce existing shortages of nutritional care to curb chronic disease and weight-related conditions and provide access in underserved communities.</p>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-6">
                             <img src="img/quixaro.png">
                             <p><a href="http://www.quixaro.com">Quixaro</a> is an online hub for student-student collaboration – a social network aimed at transforming the solitary process of studying into a dynamic, interactive experience. It's the only place on the web where students can both hang out with one another and actually study on the same platform.</p>
