--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div class="col-lg-6">
                             <img src="img/leapyear.png">
-                            <p><a href="http://leapyear.io">LeapYear</a> is a platform for creating and managing permanently de-identified copies of sensitive data. Their technology leverages differentially private algorithms to ensure that databases remain private and compliant, even in the event of a security breach. Shroudbase enables organizations to sell, share, or open-source all of their data without privacy concerns and produce accurate statistical insights from previously untouchable data.</p>
+                            <p><a href="http://leapyear.io">LeapYear</a> is an enterprise platform for securely computing on sensitive data. Leveraging the latest research in machine learning and cryptography, LeapYear enables organizations to utilize all of their data assets with proven assurances of privacy and security.</p>
                         </div>
                     </div>
                 </div>
