--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                             <p><a href="http://www.quixaro.com">Quixaro</a> is an online hub for student-student collaboration – a social network aimed at transforming the solitary process of studying into a dynamic, interactive experience. It's the only place on the web where students can both hang out with one another and actually study on the same platform.</p>
                         </div>
                         <div class="col-lg-6">
-                            <img src="img/localadventura.png">
-                            <p><a href="http://www.localaventura.com/">Local Adventura</a> is a marketplace platform, similar to AirBnb, that allows travelers seeking authentic experiences to book tours with Local Guides in Latin America who are passionate about sharing their culture. We provide customers with the ability to search through adventures, book tours instantly, and make easy, cashless payments electronically, and in advance. We believe that by connecting people from disparate parts of the globe and allowing them to explore the world together, we can improve it.</p>
+                            <img src="img/localaventura.png">
+                            <p><a href="http://www.localaventura.com/">Local Aventura</a> is a marketplace platform, similar to AirBnb, that allows travelers seeking authentic experiences to book tours with Local Guides in Latin America who are passionate about sharing their culture. We provide customers with the ability to search through adventures, book tours instantly, and make easy, cashless payments electronically, and in advance. We believe that by connecting people from disparate parts of the globe and allowing them to explore the world together, we can improve it.</p>
                         </div>
                     </div>
                     <div class="row">
