--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <h1>Apply Now</h1>
                         <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? </p>
                         <br/>
-                        <p>Submit your information below! Our next application deadline will be in late February, so you can expect to hear back from about next steps then.</p>
+                        <p>Submit your information below! Our next application deadline will be in late February, so you can expect to hear back from us about next steps then.</p>
                         <a href="apply/index.html" class="btn btn-default btn-lg">Apply Now</a>
                         <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                     </div>
