--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <div class="col-lg-4">
                             <img src="img/olivia.png" class="img-responsive" alt="Responsive image">
                             <h2>Olivia Chen</h2>
-                            <p>Olivia is a junior in the M&T Program studying Systems Engineering, Business Analytics, and Entrepreneurship & Innovation. She has previously worked at startups CB Insights and Fitly as well as hedge fund Arena Investors. On campus, she is also involved in MUSE Consulting and Wharton Undergraduate Energy Group. In her free time, Olivia enjoys reading, cooking, and searching for new music.</p>
+                            <p>Olivia is a senior in M&T studying Systems Engineering, Business Analytics, and Entrepreneurship & Innovation. She has previously worked at CB Insights, Arena Investors, and Capital One. On campus, she is also involved in MUSE Consulting and Wharton Undergraduate Energy Group. In her free time, Olivia enjoys cooking, reading, and going to concerts.</p>
                         </div>
                     </div>
                     <div class="row">
