--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <div class="col-lg-3">
                             <img src="img/rohun.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Rohun Patel</h2>
-                            <p>Rohun is a sophomore in the M&T Program studying Electrical Engineering, OPIM, and Marketing. He is interested in reading about all kinds of tech from alternative energy to consumer products. Rohun enjoys skiing, playing guitar, and listening to music.</p>
+                            <p>Rohun is a junior in the M&T Program studying Electrical Engineering and Operations, Information and Decisions. His interests include product and hardware design, reading about consumer tech, and other developing technologies. He has previously worked as an intern at KPMG's Bangalore office. In his free time, Rohun enjoys skiing and listening to music.</p>
                         </div>
                         <div class="col-lg-3">
                             <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
